--- a/src/jfun/package.json
+++ b/src/jfun/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
+    "sortablejs": "^1.7.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vue-sortable": "^0.1.3",
     "vuetify": "^1.0.19"
   },
   "devDependencies": {
