--- a/src/jfun/package.json
+++ b/src/jfun/package.json
@@ -13,7 +13,8 @@
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
     "vue-sortable": "^0.1.3",
-    "vuetify": "^1.0.19"
+    "vuetify": "^1.0.19",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.0.0-beta.49",
