--- a/src/jfun/package.json
+++ b/src/jfun/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "lodash": "^4.17.10",
     "sortablejs": "^1.7.0",
     "vue": "^2.5.17",
