--- a/src/jfun/package.json
+++ b/src/jfun/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "lodash": "^4.17.10",
+    "serve": "^10.0.0",
     "sortablejs": "^1.7.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
